<?xml version="1.0" encoding="UTF-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/logo"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/logo"
            app:srcCompat="@drawable/logo" />

        <TextView
            android:id="@+id/businessName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/business_name"
            android:textColor="#3498DB"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/hp_world_store"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/contactTextView"
            android:textColor="#3498DB"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/contactContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/mobileNumber"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/address"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/address"
            android:textColor="#3498DB"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/addressContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/addressContent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/description"
            android:textColor="#3498DB"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/descriptionContent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/descriptionContent"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/BusinessHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="16dp"
            android:baselineAligned="false"
            android:gravity="center"
            android:text="@string/business_hours"
            android:textColor="#3498DB"
            android:textSize="30sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/monHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/mon"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tueHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/tue"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/wedHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/wed"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/thuHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/thu"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/friHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/fri"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/satHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:gravity="center"
            android:text="@string/sat"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/sunHours"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginBottom="25dp"
            android:gravity="center"
            android:text="@string/sun"
            android:textSize="20sp" />

    </LinearLayout>

</ScrollView>